--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <ul>
             <li><a href="#colors">Colors</a></li>
             <li><a href="#fonts">Fonts</a></li>
-            <li><a href="#">CSS</a></li>
+            <li><a href="#text-style">Text-Style</a></li>
           </ul>
         </nav>
         <nav class="mobile">
